Add js file and new inventory service files

--- a/Verdun.Enterprise.Inventory/Views/Asset/Create.cshtml
+++ b/Verdun.Enterprise.Inventory/Views/Asset/Create.cshtml
@@ -36,7 +36,11 @@
                 <input asp-for="QuantityOnHand" class="form-control" />
                 <span asp-validation-for="QuantityOnHand" class="text-danger"></span>
             </div>
-
+            <div class="form-group">
+                <label asp-for="Notes" class="control-label"></label>
+                <textarea asp-for="Notes" class="form-control"></textarea>
+                <span asp-validation-for="Notes" class="text-danger"></span>
+            </div>
 
         </div>
         <div class="col-md-6">
