--- a/Verdun.Enterprise.Inventory/Views/Asset/Details.cshtml
+++ b/Verdun.Enterprise.Inventory/Views/Asset/Details.cshtml
@@ -43,17 +43,27 @@
             <dd class="col-sm-6">
                 @Html.DisplayFor(model => model.QuantityOnHand)
             </dd>
+            <dt class="col-sm-6">
+                @Html.DisplayNameFor(model => model.Notes)
+            </dt>
+            <dd class="col-sm-6">
+                @Html.DisplayFor(model => model.Notes)
+            </dd>
         </dl>
     </div>
     <div class="col-md-6">
         @await Html.PartialAsync("_AssetTypeAttributesDetails", Model.AssetTypeAttributeList)
-    </div>
-    
+    </div>    
 </div>
-    <div>
-        <a class="k-primary" asp-action="Edit" asp-route-assetId="@Model.AssetId">Edit</a> |
-        <a asp-action="Index">Back to List</a>
-    </div>
+<div class="form-group row">
+    <a asp-action="Edit" asp-route-assetId="@Model.AssetId">Update Asset</a> |
+    <a asp-action="Delete" asp-route-assetId="@Model.AssetId">Delete Asset</a> |
+    <a asp-action="Index">Back to List</a>
+</div>
+
+@*<div class="form-group row">
+    
+</div>*@
 
     @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.VendorCode)
