--- a/Verdun.Enterprise.Inventory/Views/Inventory/KendoJQuery.cshtml
+++ b/Verdun.Enterprise.Inventory/Views/Inventory/KendoJQuery.cshtml
@@ -17,7 +17,7 @@
             var dataSource = new kendo.data.DataSource({
                 transport: {
                     index: {
-                        url: "http://localhost:56576/Inventory/index",
+                        url: "http://localhost:56576/Inventory/KendoJQuery",
                         dataType: "jsonp"
                     }
                 },
