--- a/Verdun.Enterprise.Inventory/Views/Asset/Create.cshtml
+++ b/Verdun.Enterprise.Inventory/Views/Asset/Create.cshtml
@@ -8,8 +8,8 @@
 <h5>Select an asset type</h5>
 <hr />
 <form asp-action="Create" method="post">
-    <div class="group-form-row row">
-        <div class="col-md-6">
+    <div class="group-form row">
+        <div class="col-md-4">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" id="assetTypeId">
                 <label asp-for="AssetTypeId" class="control-label" data-val-required="true"></label>
@@ -43,7 +43,7 @@
             </div>
 
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
             <div id="partialAttr"></div>
         </div>
     </div>
