--- a/Verdun.Enterprise.Inventory/Views/Asset/Details.cshtml
+++ b/Verdun.Enterprise.Inventory/Views/Asset/Details.cshtml
@@ -7,8 +7,8 @@
 <Legend>Asset Details</Legend>
 <br/>
 <hr />
-<div class="row">            
-    <div class="col-md-6">
+<div class="form-group row">            
+    <div class="col-md-4">
         <dl class="row">
             <dt class="col-sm-6">
                 @Html.DisplayNameFor(model => model.AssetType)
@@ -51,7 +51,7 @@
             </dd>
         </dl>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         @await Html.PartialAsync("_AssetTypeAttributesDetails", Model.AssetTypeAttributeList)
     </div>    
 </div>
