--- a/Verdun.Enterprise.Inventory/Views/Inventory/Index.cshtml
+++ b/Verdun.Enterprise.Inventory/Views/Inventory/Index.cshtml
@@ -4,11 +4,9 @@
 
 <br />
 <hr />
-@*  <div class="row col-lg-12 col-md-12">
-    <div class="row" id="input">*@
-<form asp-action="Create" method="post">
-    <div class="group-form-row row">
-        <div class="col-lg-6 col-md-6">
+<form asp-action="Index" method="get">
+    <div class="form-group row">
+        <div class="col-md-4">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" id="assetTypeId">
                 <label asp-for="AssetTypeId" class="control-label" data-val-required="true"></label>
@@ -27,7 +25,7 @@
             </div>
 
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-md-4">
             @await Html.PartialAsync("_InventoryAttributes", Model.AssetTypeAttributeList)
         </div>
     </div>
@@ -37,19 +35,15 @@
         </div>
     </div>
 </form>
-@*</div>*@
-<div class="form-group row col-lg-12 col-md-12" id="assetResult">
+
+<div class="form-group row" id="assetResult">
     Asset Search Result
 </div>
 
-<div class="form-group row col-lg-12 col-md-12" id="inventoryResult">
+<div class="form-group row" id="inventoryResult">
     Inventory Search Result
 </div>
-@*</div>*@
 
-@*<div class="row col-md-12">
-        <a asp-action="Edit" asp-route-assetId="@Model.AssetId">Update Asset</a> |
-        <a asp-action="Delete" asp-route-assetId="@Model.AssetId">Delete Asset</a> |
-        <a asp-action="Index">Back to List</a>
-    </div>*@
+
+
 
