check minor changes

--- a/Verdun.Enterprise.Inventory/Views/Asset/Index.cshtml
+++ b/Verdun.Enterprise.Inventory/Views/Asset/Index.cshtml
@@ -68,7 +68,7 @@
 
     <br />
     <div class="group-form row">
-        <a asp-action="Create">Create a New Asset</a>
+        <a asp-action="Create">Create a New Asset<span class="k-icon k-i-plus"/></a>
         @*<a class="k-button k-button-icontext" href="Asset/Create">Create Asset</a>*@
     </div>
 
